# time-series

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: test_pipeline.yml
src/tseries/: __init__.py  config.py
src/tseries/data/: weather.py
src/tseries/time_series/: __init__.py
tests/: test_dummy.py
